<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.authenticate.SignUpActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:clickable="true"
            android:id="@+id/lay_sign_up_main">

            <RelativeLayout
                android:id="@+id/lay_sign_up_top"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:background="@color/colorPrimaryDark">

                <!--<ImageView-->
                    <!--android:id="@+id/iv_sign_up_back"-->
                    <!--android:layout_width="45dp"-->
                    <!--android:layout_height="45dp"-->
                    <!--android:src="@mipmap/ic_launcher"-->
                    <!--android:padding="@dimen/padding_five"-->
                    <!--android:layout_marginLeft="@dimen/margin_ten"-->
                    <!--android:layout_marginTop="@dimen/margin_ten"-->
                    <!--android:layout_marginStart="@dimen/margin_ten"-->
                    <!--android:contentDescription="@null" />-->

                <ImageView
                    android:id="@+id/iv_sign_up_logo"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@mipmap/sign_up_logo"
                    android:padding="@dimen/padding_five"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="@dimen/margin_ten"
                    android:layout_marginTop="@dimen/margin_fifteen"
                    android:layout_marginStart="@dimen/margin_ten"
                    android:contentDescription="@null" />

                <com.app.finlit.utils.views.TextViewEuphemiaBold
                    android:id="@+id/txt_sign_up_signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_heading"
                    android:textColor="@color/white"
                    android:text="@string/sign_up"
                    android:gravity="center"
                    android:layout_below="@id/iv_sign_up_logo"
                    android:layout_marginTop="@dimen/margin_ten"/>

                <com.app.finlit.utils.views.TextViewEuphemiaRegular
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_small"
                    android:textColor="@color/white_light"
                    android:text="@string/find_like_minded_people_for_your_financial_literacy"
                    android:gravity="center"
                    android:layout_below="@id/txt_sign_up_signup"
                    android:layout_marginTop="@dimen/margin_ten"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/lay_sign_up_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-100dp"
                android:layout_below="@+id/lay_sign_up_top">

                <View
                    android:id="@+id/view_card"
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:layout_marginLeft="@dimen/margin_forty"
                    android:layout_marginRight="@dimen/margin_forty"
                    android:background="@color/pink"/>

                <android.support.v7.widget.CardView
                    android:id="@+id/card_view_sign_up"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_below="@id/view_card"
                    android:layout_marginLeft="@dimen/margin_twenty_five"
                    android:layout_marginRight="@dimen/margin_twenty_five"
                    android:layout_marginBottom="@dimen/margin_five"
                    app:elevation="@dimen/margin_seven">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/iv_sign_up_facebook"
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:scaleType="fitXY"
                            android:src="@mipmap/icon_facebook"
                            android:layout_marginLeft="@dimen/margin_twenty"
                            android:layout_marginRight="@dimen/margin_twenty"
                            android:contentDescription="@null"
                            android:layout_marginTop="@dimen/margin_ten"/>

                        <com.app.finlit.utils.views.TextViewEuphemiaRegular
                            android:layout_width="match_parent"
                            android:layout_height="20dp"
                            android:layout_marginTop="@dimen/margin_five"
                            android:text="@string/or_sign_up_with_email"
                            android:gravity="center"
                            android:textColor="@color/hint_color"
                            android:textSize="@dimen/text_small" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:orientation="horizontal"
                            android:weightSum="5"
                            android:padding="@dimen/padding_five"
                            android:background="@mipmap/icon_edittext"
                            android:layout_marginTop="@dimen/margin_five"
                            android:layout_marginLeft="@dimen/margin_twenty"
                            android:layout_marginRight="@dimen/margin_twenty">

                            <com.app.finlit.utils.views.EditTextEuphemiaRegular
                                android:id="@+id/et_email"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@color/white"
                                android:inputType="textEmailAddress"
                                android:hint="@string/email"
                                android:layout_weight="0.8"
                                android:imeOptions="actionDone"
                                android:ems="10"
                                android:textSize="@dimen/text"
                                android:textColor="@color/black"
                                android:textColorHint="@color/hint_color"
                                android:paddingLeft="@dimen/padding_ten"
                                android:paddingRight="@dimen/padding_ten" />

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="4.2"
                                android:layout_marginRight="@dimen/margin_ten"
                                android:contentDescription="@null"
                                android:src="@mipmap/icon_email"
                                android:padding="@dimen/padding_five"
                                android:layout_marginEnd="@dimen/margin_ten" />

                        </LinearLayout>

                        <com.app.finlit.utils.views.TextViewSegoeSemiBold
                            android:id="@+id/tv_sign_up"
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:layout_marginTop="@dimen/margin_fifteen"
                            android:layout_marginLeft="@dimen/margin_twenty"
                            android:layout_marginRight="@dimen/margin_twenty"
                            android:text="@string/sign_up"
                            android:background="@drawable/background_sign_up"
                            android:gravity="center"
                            android:textColor="@color/white"
                            android:textSize="@dimen/text" />

                    </LinearLayout>

                </android.support.v7.widget.CardView>

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/lay_sign_up_already"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="@dimen/margin_twenty"
                android:layout_below="@+id/lay_sign_up_card">

                <com.app.finlit.utils.views.TextViewEuphemiaRegular
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/hint_color"
                    android:textSize="@dimen/text"
                    android:text="@string/already_have_an_account"/>

                <com.app.finlit.utils.views.TextViewSegoeSemiBold
                    android:id="@+id/txt_sign_up_signin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginLeft="@dimen/margin_five"
                    android:textColor="@color/text_blue"
                    android:textSize="@dimen/text"
                    android:text="@string/sign_in"
                    android:layout_marginStart="@dimen/margin_five" />

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/margin_twenty">

        <com.app.finlit.utils.views.TextViewEuphemiaRegular
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_twenty"
            android:layout_marginRight="@dimen/margin_twenty"
            android:gravity="center|start"
            android:padding="@dimen/margin_ten"
            android:text="@string/by_clicking_continue_with_facebook_or_sign_up"
            android:textSize="@dimen/text_small"
            android:textColor="@color/text_grey" />

    </RelativeLayout>

</RelativeLayout>