<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.authenticate.SignInActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:clickable="true"
            android:id="@+id/lay_sign_in_main">

            <RelativeLayout
                android:id="@+id/lay_sign_in_top"
                android:layout_width="match_parent"
                android:layout_height="320dp"
                android:background="@color/colorPrimaryDark">

                <ImageView
                    android:id="@+id/iv_sign_in_back"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@mipmap/icon_back"
                    android:padding="@dimen/padding_seven"
                    android:layout_marginLeft="@dimen/margin_ten"
                    android:layout_marginTop="@dimen/margin_twenty"
                    android:layout_marginStart="@dimen/margin_ten"
                    android:contentDescription="@null" />

                <ImageView
                    android:id="@+id/iv_sign_in_logo"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@mipmap/sign_up_logo"
                    android:padding="@dimen/padding_five"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="@dimen/margin_ten"
                    android:layout_marginTop="@dimen/margin_fifteen"
                    android:layout_marginStart="@dimen/margin_ten"
                    android:contentDescription="@null" />

                <com.app.finlit.utils.views.TextViewEuphemiaBold
                    android:id="@+id/txt_sign_in_signin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_heading"
                    android:textColor="@color/white"
                    android:text="@string/sign_In"
                    android:gravity="center"
                    android:layout_below="@id/iv_sign_in_logo"
                    android:layout_marginTop="@dimen/margin_ten"/>

                <com.app.finlit.utils.views.TextViewEuphemiaRegular
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_small"
                    android:textColor="@color/white_light"
                    android:text="@string/find_like_minded_people_for_your_financial_literacy"
                    android:gravity="center"
                    android:layout_below="@id/txt_sign_in_signin"
                    android:layout_marginTop="@dimen/margin_ten"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/lay_sign_in_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-100dp"
                android:layout_below="@+id/lay_sign_in_top">

                <View
                    android:id="@+id/view_card"
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:layout_marginLeft="@dimen/margin_forty"
                    android:layout_marginRight="@dimen/margin_forty"
                    android:background="@color/pink"/>

                <android.support.v7.widget.CardView
                    android:id="@+id/card_view_sign_in"
                    android:layout_width="match_parent"
                    android:layout_height="280dp"
                    android:layout_below="@id/view_card"
                    android:layout_marginLeft="@dimen/margin_twenty_five"
                    android:layout_marginRight="@dimen/margin_twenty_five"
                    android:layout_marginBottom="@dimen/margin_five"
                    app:elevation="@dimen/margin_seven">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/iv_sign_in_facebook"
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:scaleType="fitXY"
                            android:src="@mipmap/icon_facebook"
                            android:layout_marginLeft="@dimen/margin_twenty"
                            android:layout_marginRight="@dimen/margin_twenty"
                            android:contentDescription="@null"
                            android:layout_marginTop="@dimen/margin_ten"/>

                        <com.app.finlit.utils.views.TextViewEuphemiaRegular
                            android:layout_width="match_parent"
                            android:layout_height="20dp"
                            android:layout_marginTop="@dimen/margin_ten"
                            android:text="Or Sign In With Email"
                            android:gravity="center"
                            android:textColor="@color/hint_color"
                            android:textSize="@dimen/text_small" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:orientation="horizontal"
                            android:weightSum="5"
                            android:padding="@dimen/padding_five"
                            android:background="@mipmap/icon_edittext"
                            android:layout_marginTop="@dimen/margin_ten"
                            android:layout_marginLeft="@dimen/margin_twenty"
                            android:layout_marginRight="@dimen/margin_twenty">

                            <com.app.finlit.utils.views.EditTextEuphemiaRegular
                                android:id="@+id/et_sign_in_email"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@color/white"
                                android:inputType="textEmailAddress"
                                android:hint="@string/email"
                                android:layout_weight="0.8"
                                android:imeOptions="actionNext"
                                android:ems="10"
                                android:textSize="@dimen/text"
                                android:textColor="@color/black"
                                android:textColorHint="@color/hint_color"
                                android:paddingLeft="@dimen/padding_ten"
                                android:paddingRight="@dimen/padding_ten" />

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="4.2"
                                android:layout_marginRight="@dimen/margin_ten"
                                android:contentDescription="@null"
                                android:src="@mipmap/icon_email"
                                android:padding="@dimen/padding_five"
                                android:layout_marginEnd="@dimen/margin_ten" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:padding="@dimen/padding_five"
                            android:background="@mipmap/icon_edittext"
                            android:orientation="horizontal"
                            android:weightSum="5"
                            android:layout_marginTop="@dimen/margin_fifteen"
                            android:layout_marginLeft="@dimen/margin_twenty"
                            android:layout_marginRight="@dimen/margin_twenty">

                            <com.app.finlit.utils.views.EditTextEuphemiaRegular
                                android:id="@+id/et_sign_in_password"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@color/white"
                                android:inputType="textPassword"
                                android:hint="@string/password"
                                android:layout_weight="0.8"
                                android:imeOptions="actionDone"
                                android:ems="10"
                                android:textSize="@dimen/text"
                                android:textColor="@color/black"
                                android:textColorHint="@color/text_grey"
                                android:paddingLeft="@dimen/padding_ten"
                                android:paddingRight="@dimen/padding_ten" />

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="4.2"
                                android:layout_marginRight="@dimen/margin_ten"
                                android:contentDescription="@null"
                                android:src="@mipmap/icon_password"
                                android:padding="@dimen/padding_five"
                                android:layout_marginEnd="@dimen/margin_ten" />

                        </LinearLayout>

                        <com.app.finlit.utils.views.TextViewSegoeSemiBold
                            android:id="@+id/txt_sign_in_signIn"
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:layout_marginTop="@dimen/margin_twenty"
                            android:layout_marginLeft="@dimen/margin_twenty"
                            android:layout_marginRight="@dimen/margin_twenty"
                            android:text="@string/sign_In"
                            android:background="@drawable/background_sign_up"
                            android:gravity="center"
                            android:textColor="@color/white"
                            android:textSize="@dimen/text" />

                    </LinearLayout>

                </android.support.v7.widget.CardView>

            </RelativeLayout>

            <com.app.finlit.utils.views.TextViewSegoeSemiBold
                android:id="@+id/tv_forget_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginLeft="@dimen/margin_five"
                android:textColor="@color/text_blue"
                android:textSize="@dimen/text_small"
                android:text="Forgot Password?"
                android:layout_below="@+id/lay_sign_in_card"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/margin_thirty"
                android:layout_marginStart="@dimen/margin_five"
                android:layout_marginEnd="@dimen/margin_thirty" />

            <LinearLayout
                android:id="@+id/lay_sign_in_already"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="@dimen/margin_twenty"
                android:layout_below="@+id/tv_forget_password">

                <com.app.finlit.utils.views.TextViewEuphemiaRegular
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/hint_color"
                    android:textSize="@dimen/text"
                    android:text="@string/new_to_our_network"/>

                <com.app.finlit.utils.views.TextViewSegoeSemiBold
                    android:id="@+id/txt_sign_in_signUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginLeft="@dimen/margin_five"
                    android:textColor="@color/text_blue"
                    android:textSize="@dimen/text"
                    android:text="@string/signUp"
                    android:layout_marginStart="@dimen/margin_five" />

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>